Bugfix/water too low on mobile (#3)
Fixed water being too low on mobile device and increased font size

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,7 @@
     background-color: rgba($color: #c1c1c2, $alpha: 0.5);
     border-radius: 10px;
 }
+
+p {
+    font-size: larger;
+}
